# aoc2015

./: .pre-commit-config.yaml  .prospector.yaml  README.md  mypy.ini  pyproject.toml
day1/: README.md  part1.py  part1_test.py  part2.py  part2_test.py
day2/: README.md  part1.py  part1_test.py  part2.py  part2_test.py
day3/: README.md  common.py  part1.py  part1_test.py  part2.py  part2_test.py
day4/: README.md  part1.py  part1_test.py
template/: README.md  part1.py  part1_test.py
utils/: __init__.py  timer.py
