[tool.poetry]
name = "aoc2015"
version = "0.1.0"
description = ""
authors = ["Panos Mavrogiorgos <pmav99@gmail.com>"]
packages = [
  { include = "utils" },
]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pre-commit = "^2.5.1"
mypy = "^0.781"
black = "^19.10b0"
prospector = {version = "^1.2.0", extras = []}

[tool.black]
target-version = ["py38"]
line-length = 109
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | \venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
